--- a/index.html
+++ b/index.html
@@ -122,83 +122,89 @@
 
       <!-- Our team -->
 
-      <section class="our-teams">
-        <h2 class="section-team">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team">
-            <img
-              src="./images/person-1.jpg"
-              alt="photo Product Designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p class="team-description">Product Designer</p>
-          </li>
-          <li class="team">
-            <img
-              src="./images/person-2.jpg"
-              alt="photo Frontend Developer"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title">Ольга Рєпіна</h3>
-            <p class="team-description">Frontend Developer</p>
-          </li>
-          <li class="team">
-            <img
-              src="./images/person-3.jpg"
-              alt="photo Marketing"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title">Микола Тарасов</h3>
-            <p class="team-description">Marketing</p>
-          </li>
-          <li class="team">
-            <img
-              src="./images/person-4.jpg"
-              alt="photo UI Designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title">Михайло Єрмаков</h3>
-            <p class="team-description">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section color">
+        <div class="container">
+          <h2 class="section-team">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team">
+              <img
+                src="./images/person-1.jpg"
+                alt="photo Product Designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title">Ігор Дем'яненко</h3>
+              <p class="team-description">Product Designer</p>
+            </li>
+            <li class="team">
+              <img
+                src="./images/person-2.jpg"
+                alt="photo Frontend Developer"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title">Ольга Рєпіна</h3>
+              <p class="team-description">Frontend Developer</p>
+            </li>
+            <li class="team">
+              <img
+                src="./images/person-3.jpg"
+                alt="photo Marketing"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title">Микола Тарасов</h3>
+              <p class="team-description">Marketing</p>
+            </li>
+            <li class="team">
+              <img
+                src="./images/person-4.jpg"
+                alt="photo UI Designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title">Михайло Єрмаков</h3>
+              <p class="team-description">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <!-- Contact section -->
-    <footer class="footer">
-      <a href="index.html" class="logo-bottom">
-        Web<span class="accent-bottom">Studio</span></a
-      >
 
-      <address>
-        <ul class="contacts">
-          <li>
-            <a
-              href="https://goo.gl/maps/xXwerkRyj4VmhhRbA"
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-              class="address"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-              class="contact"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+    <!-- Contact section -->
+
+    <footer class="footer">
+      <div class="container">
+        <a href="index.html" class="logo-bottom">
+          Web<span class="accent-bottom">Studio</span></a
+        >
+
+        <address>
+          <ul class="contacts">
+            <li>
+              <a
+                href="https://goo.gl/maps/xXwerkRyj4VmhhRbA"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="address"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
