--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,8 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class="portfolio-container">
+      <section class="section">
+        <div class="container">
           <ul class="portfolio-button">
             <li><button type="button" class="button-link">Усі</button></li>
             <li>
@@ -71,8 +71,10 @@
                 alt="фото проекту1"
                 width="370"
               />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-description">Веб-сайт</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-description">Веб-сайт</p>
+              </div>
             </li>
             <li>
               <img
@@ -80,8 +82,12 @@
                 alt="фото проекту2"
                 width="370"
               />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-description">Дизайн</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfolio-description">Дизайн</p>
+              </div>
             </li>
             <li>
               <img
@@ -89,8 +95,10 @@
                 alt="фото проекту3"
                 width="370"
               />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-description">Додаток</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-description">Додаток</p>
+              </div>
             </li>
             <li>
               <img
@@ -98,8 +106,10 @@
                 alt="фото проекту4"
                 width="370"
               />
-              <h2 class="portfolio-title">Проєкт Prime</h2>
-              <p class="portfolio-description">Маркетинг</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">Проєкт Prime</h2>
+                <p class="portfolio-description">Маркетинг</p>
+              </div>
             </li>
             <li>
               <img
@@ -107,8 +117,10 @@
                 alt="фото проекту5"
                 width="370"
               />
-              <h2 class="portfolio-title">Проєкт Boxes</h2>
-              <p class="portfolio-description">Додаток</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">Проєкт Boxes</h2>
+                <p class="portfolio-description">Додаток</p>
+              </div>
             </li>
             <li>
               <img
@@ -116,8 +128,10 @@
                 alt="фото проекту6"
                 width="370"
               />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-description">Веб-сайт</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-description">Веб-сайт</p>
+              </div>
             </li>
             <li>
               <img
@@ -125,8 +139,10 @@
                 alt="фото проекту7"
                 width="370"
               />
-              <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p class="portfolio-description">Дизайн</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">Видання Limited Edition</h2>
+                <p class="portfolio-description">Дизайн</p>
+              </div>
             </li>
             <li>
               <img
@@ -134,8 +150,10 @@
                 alt="фото проекту8"
                 width="370"
               />
-              <h2 class="portfolio-title">Проєкт LAB</h2>
-              <p class="portfolio-description">Маркетинг</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">Проєкт LAB</h2>
+                <p class="portfolio-description">Маркетинг</p>
+              </div>
             </li>
             <li>
               <img
@@ -143,8 +161,10 @@
                 alt="фото проекту9"
                 width="370"
               />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-description">Додаток</p>
+              <div class="portfolio-text">
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-description">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -153,35 +173,37 @@
 
     <!-- Contact section -->
     <footer class="footer">
-      <a href="index.html" class="logo-bottom">
-        Web<span class="accent-bottom">Studio</span></a
-      >
+      <div class="container">
+        <a href="index.html" class="logo-bottom">
+          Web<span class="accent-bottom">Studio</span></a
+        >
 
-      <address>
-        <ul class="contacts">
-          <li>
-            <a
-              href="https://goo.gl/maps/xXwerkRyj4VmhhRbA"
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-              class="address"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-              class="contact"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+        <address>
+          <ul class="contacts">
+            <li>
+              <a
+                href="https://goo.gl/maps/xXwerkRyj4VmhhRbA"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="address"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
