--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
       </section>
       <!-- Activity section -->
-      <section class="section">
+      <section class="section indent">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="activity-list">
@@ -133,8 +133,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-title">Ігор Дем'яненко</h3>
-              <p class="team-description">Product Designer</p>
+              <div class="team-text">
+                <h3 class="team-title">Ігор Дем'яненко</h3>
+                <p class="team-description">Product Designer</p>
+              </div>
             </li>
             <li class="team">
               <img
@@ -143,8 +145,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-title">Ольга Рєпіна</h3>
-              <p class="team-description">Frontend Developer</p>
+              <div class="team-text">
+                <h3 class="team-title">Ольга Рєпіна</h3>
+                <p class="team-description">Frontend Developer</p>
+              </div>
             </li>
             <li class="team">
               <img
@@ -153,8 +157,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-title">Микола Тарасов</h3>
-              <p class="team-description">Marketing</p>
+              <div class="team-text">
+                <h3 class="team-title">Микола Тарасов</h3>
+                <p class="team-description">Marketing</p>
+              </div>
             </li>
             <li class="team">
               <img
@@ -163,8 +169,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-title">Михайло Єрмаков</h3>
-              <p class="team-description">UI Designer</p>
+              <div class="team-text">
+                <h3 class="team-title">Михайло Єрмаков</h3>
+                <p class="team-description">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -178,10 +186,9 @@
         <a href="index.html" class="logo-bottom">
           Web<span class="accent-bottom">Studio</span></a
         >
-
         <address>
           <ul class="contacts">
-            <li>
+            <li class="footer-indent">
               <a
                 href="https://goo.gl/maps/xXwerkRyj4VmhhRbA"
                 target="_blank"
@@ -190,7 +197,7 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-indent">
               <a
                 href="mailto:info@devstudio.com"
                 target="_blank"
