--- a/portfolio.html
+++ b/portfolio.html
@@ -177,10 +177,9 @@
         <a href="index.html" class="logo-bottom">
           Web<span class="accent-bottom">Studio</span></a
         >
-
         <address>
           <ul class="contacts">
-            <li>
+            <li class="footer-indent">
               <a
                 href="https://goo.gl/maps/xXwerkRyj4VmhhRbA"
                 target="_blank"
@@ -189,7 +188,7 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-indent">
               <a
                 href="mailto:info@devstudio.com"
                 target="_blank"
